# Pokerogue

./: CMakeLists.txt  README.md  TODO.txt
scripts/: build_cartridge.sh  image_3_process_images.sh
scripts/python/cartridge/: make_cartridge.py  manage.py
scripts/python/config/: constants.py
scripts/python/data/: _trainer_img_data.py  db_manager.py
scripts/python/export/: export.py  export_all.py  export_structs.py
scripts/python/sound/: export_MIDI_to_C.py
scripts/python/text/: model_119b.py
src/GameCartridge/: CMakeLists.txt  ram.ld
src/GameCore/: CMakeLists.txt  ai.c  ai.h  animation.c  animation.h  animation_effects.c  battles.c  battles.h  camera.c  camera.h  collision.c  constants.h  core.c  effects.c  effects.h  effects_items.c  effects_objects.c  effects_skills.c  effects_spells.c  entities.c  entities.h  enums.h  game_state.c  game_state.h  graphics.c  graphics.h  map.c  memory_access.c  memory_access.h  memory_ram.c  memory_ram.h  memory_rom.c  memory_rom.h  menu.c  menu.h  menu_battle.c  menu_main.c  menu_main.h  player.c  player.h  (+11 more)
src/GameCore/inc/: data_colors16.inc  data_colors256.inc  data_constants.inc  data_creature_level_up_skills.inc  data_enum_trainers.inc  data_font16x16.inc  data_trainer_level_up_skills.inc  data_trainer_skills.inc  decl_objects.inc  decl_spells.inc  map_sprites_objects.inc  memory_constants.inc  sounds_music_data.inc  sprite_map_creatures.inc  sprite_map_items.inc  sprite_map_objects.inc  sprite_map_tiles.inc  sprite_map_trainers.inc  sprite_trainer.inc  sprite_trainer_layout.inc  text_desc_trainers.inc  text_menu_battle.inc  text_menu_main.inc  text_menu_options.inc  text_names_trainers.inc
src/GameCoreTests/: CMakeLists.txt  animation_tests.c  combat_tests.c  combat_tests.h  creatures.c  creatures.h  hash_map_tests.c  main.c  utils_tests.c
src/PicoGame/: CMakeLists.txt  cartridge.c  cartridge.h  cartridge_rom.c  hardware.c  ili9341.c  ili9341.h  init.c  input.c  main.c  memmap_default.ld  memory_psram.c  memory_ram.h  pico_constants.h  pico_ram.c  pico_ram.h  pico_rom.c  pico_rom.h  sounds.c  sounds.h
src/PicoTypes/: CMakeLists.txt  lib_constants.h  lib_debugging.h  lib_decl.h  lib_enums.h  lib_memory.h  lib_types.h
src/SDLGame/: main.c
